syntax = "proto3";

package obs_remote.scene_collections;

import "google/protobuf/empty.proto";

// API functions related to scene collections.
service SceneCollections {
  // Change the active scene collection.
  rpc SetCurrent(SetCurrentRequest)
      returns (google.protobuf.Empty);
  // Get the name of the current scene collection.
  rpc GetCurrent(google.protobuf.Empty)
      returns (GetCurrentReply);
  // List available scene collections.
  rpc List(google.protobuf.Empty)
      returns (ListReply);
}

message SetCurrentRequest {
  // Name of the desired scene collection.
  string name = 1;
}

message GetCurrentReply {
  // Name of the currently active scene collection.
  string name = 1;
}

message ListReply {
  // Scene collections list.
  repeated string scene_collections = 1;
}
